syntax = "proto3";
package pb;
option go_package = ".;pb";
enum COMPONENT_TYPE
{
    CENTER = 0 ;
    DISPATCHER = 1 ;
    LOGIN = 2 ;
    GATE = 3 ;
    GAME = 4 ;
}
enum Property_Type{
    INVALID = 0;
    INT32 = 1;
    String = 2;
    INT64 = 3;
    BOOL = 4;
}
message Property{
    Property_Type type = 1;
    uint32 p_int = 2;
    string  p_string = 3;
    uint64 p_float = 4;
    bool p_bool = 5;
}
message PropertyMap{
    uint32 key = 1;
    Property value = 2;
}
message ADD_ENGINE_COMPONENT
{
  COMPONENT_TYPE type   = 1;
  string listen_addr = 2;
  uint32 component_id = 3;
}
message ADD_ENGINE_COMPONENT_ACK
{
    uint32 component_id = 1;
    repeated ADD_ENGINE_COMPONENT component_list = 2;
}
message GET_ALL_LOGIN_COMPONENT{

}
message GET_ALL_LOGIN_COMPONENT_ACK{
    repeated string login_list = 1;
}
message SYNC_PROXY_PROPERTY{
    repeated PropertyMap property_map_list = 1;
}