syntax = "proto3";
package pb;
option go_package = ".;pb";

message WrapMessage
{
  int32 cmd   = 1; // 协议编号
  bytes   content   = 2; // 协议二进制
  int32  request   =3; //请求码
  int32  response =4; //响应码
  int32  code = 5; //返回码
}